responsive forms and search by category added and loading action for deleting and creating successfully addded

--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-font-awesome": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "watchpack": "^2.4.0",
