--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "olx",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://nizam-chenath.github.io/cookie",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
@@ -14,7 +15,7 @@
     "react-dom": "^17.0.2",
     "react-font-awesome": "^1.0.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "watchpack": "^2.4.0",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.19"
@@ -23,7 +24,9 @@
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
